feat: Cambios en el manejo de clasificación y priorización de sollicitudes
